Display /mnt/data only on gbottari-personal

--- a/dot_config/polybar/config.tmpl
+++ b/dot_config/polybar/config.tmpl
@@ -84,7 +84,9 @@ interval = 5
 spacing = 3 
 mount-0 = /
 mount-1 = /home
+{{- if eq .chezmoi.hostname "gbottari-personal" }}
 mount-2 = /mnt/data
+{{- end }}
 
 label-mounted = %mountpoint%: %free%
 label-unmounted = %mountpoint% not mounted
