Config keyboard config on zenbook

--- a/scripts/executable_fix_keyboard.sh.tmpl
+++ b/scripts/executable_fix_keyboard.sh.tmpl
@@ -4,6 +4,10 @@
 setxkbmap -device 4 -model pc105 -layout us -option caps:escape
 setxkbmap -device 20 -model pc105 -layout us -variant alt-intl -option caps:escape
 {{- end }}
+{{- if eq .chezmoi.hostname "zenbook" }}
+setxkbmap -device 3 -model pc105 -layout br -option caps:escape
+setxkbmap -device 16 -model pc105 -layout us -variant alt-intl -option caps:escape
+{{- end }}
 
-# xmodmap /home/gbottari/.Xmodmap
+xmodmap /home/gbottari/.Xmodmap
 
