--- a/dot_config/polybar/config.tmpl
+++ b/dot_config/polybar/config.tmpl
@@ -28,27 +28,13 @@ padding-right = 5
 module-margin-left = 1
 module-margin-right = 2
 
-;font-0 = NotoSans-Regular:size=10;0
-;font-1 = NotoSans-Regular:size=10;0
-;font-2 = NotoSans-Regular:size=10;0
-;font-3 = NotoSans-Regular:size=10;0
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = Siji:pixelsize=10;1
-;font-3 = NotoSans-Regular:size=8;-1
-;font-4 = MaterialIcons:size=10;-1
-;font-5 = Termsynu:size=8:antialias=false;0
-;font-0 = fixed:pixelsize=10;1
-;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-;font-2 = siji:pixelsize=10;1
+font-0 = NotoSans-Regular:size=14;0
 
 modules-left = i3
 modules-right = cpu battery temperature filesystem date 
 
 tray-position = ${env:TRAY_POSITION:right}
 tray-padding = 3
-
-;wm-restack = i3
 
 override-redirect = false 
 
