--- a/dot_config/polybar/config.tmpl
+++ b/dot_config/polybar/config.tmpl
@@ -28,7 +28,7 @@ padding-right = 5
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = NotoSans-Regular:size=14;0
+font-0 = {{ .polybar_font }}
 
 modules-left = i3
 modules-right = cpu battery temperature filesystem date 
@@ -70,9 +70,7 @@ interval = 5
 spacing = 3 
 mount-0 = /
 mount-1 = /home
-{{- if eq .chezmoi.hostname "gbottari-personal" }}
 mount-2 = /mnt/data
-{{- end }}
 
 label-mounted = %mountpoint%: %free%
 label-unmounted = %mountpoint% not mounted
