--- a/dot_config/polybar/config.tmpl
+++ b/dot_config/polybar/config.tmpl
@@ -8,9 +8,10 @@ secondary = ${xrdb:color2}
 alert = ${xrdb:color3}
 
 [bar/example]
+dpi = {{ .dpi }}
 monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 2.5%
+height = {{ .polybar_height  }}
 fixed-center = false
 
 background = ${colors.background:00000000}
@@ -34,7 +35,8 @@ modules-left = i3
 modules-right = cpu battery temperature filesystem date 
 
 tray-position = ${env:TRAY_POSITION:right}
-tray-padding = 3
+tray-padding = {{ .polybar_tray_padding }}
+tray-maxsize = {{ .polybar_tray_maxsize }}
 
 override-redirect = false 
 
