Fix i3 and polybar for the new dock station

--- a/dot_config/polybar/executable_launch.sh.tmpl
+++ b/dot_config/polybar/executable_launch.sh.tmpl
@@ -10,7 +10,7 @@
   tray_output="eDP-1"
 : '
   for m in $outputs; do
-    if [[ $m == "HDMI-1" ]]; then
+    if [[ $m == "{{ .external_display }}" ]]; then
         tray_output=$m
     fi
   done
