--- a/dot_config/polybar/config.tmpl
+++ b/dot_config/polybar/config.tmpl
@@ -17,7 +17,7 @@ fixed-center = false
 background = ${colors.background:00000000}
 foreground = ${colors.foreground:#FFF}
 
-line-size = 2 
+line-size = 0 
 line-color = #f00
 
 border-size = 0
@@ -29,7 +29,7 @@ padding-right = 6
 module-margin = 2
 
 font-0 = {{ .polybar_font }}
-font-1 = Noto Color Regular:size=9
+font-1 = icomoon:size=9:sty
 
 modules-left = i3
 modules-right = memory cpu battery temperature filesystem date
@@ -57,7 +57,7 @@ mount-1 = /home
 mount-2 = /mnt/data
 {{ end }}
 
-label-mounted = %mountpoint%: %free%
+label-mounted = "  %mountpoint%: %free%"
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -115,7 +115,7 @@ label-urgent-padding = 4
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "cpu:  "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
 label = %percentage:2%%
@@ -123,7 +123,7 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "mem:  "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
 label = %percentage_used%%
@@ -138,6 +138,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M
 
+format = " <label>"
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
@@ -183,7 +184,7 @@ format-charging-underline = #ffb52a
 format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = "batt:  "
+format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
